# yt-dlp-api

./: Dockerfile  compose.dev.yaml  compose.yaml  pyproject.toml  todo.md
tests/: conftest.py  test_post_processing_functions.py  test_transcription.py
tests/cassettes/test_transcription/: TestTranscriptAssemblyAi.test_transcript_aai.yaml
tests/samples/: sample_for_speedup.m4a  sample_with_silence.m4a
yt_dlp_api/: auth.py  config.py  main.py  post_processing.py  transcription.py  utils.py  worker.py  yt_dlp.py
yt_dlp_api/controllers/: jobs.py  transcription.py  yt_dlp.py
