[project]
name = "yt-dlp-rest-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chancy[cli,web]>=0.24.1",
    "granian[uvloop]>=2.5.0",
    "httpx>=0.28.1",
    "litestar-granian>=0.14.2",
    "litestar[annotated-types,attrs,opentelemetry,prometheus,sqlalchemy,structlog]>=2.17.0",
    "psycopg[c]>=3.2.9",
    "python-dotenv>=1.1.1",
    "uvloop>=0.21.0",
    "yt-dlp>=2025.8.11",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.10.4",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-recording>=0.13.4",
    "ruff>=0.12.8",
    "vcrpy>=7.0.0",
]
